--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
     "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "postgres": "^3.4.5",
